--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,10 @@
+3.12
+- Tagged as 3.12
+- Added AceTimer-3.0 back to libs as AceBucket is dependent on it
+- Added Shaman's Reincarnation
+- Added missing argument in Scale function
+- Added names for available CD to tooltip
+
 3.11
 -Tagged as 3.11
 -Updated TOC
