--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+3.16
+- Tagged as 3.16
+- Added more commands to /blcd command list
+- Added wipe detection and CD reset
+
 3.15
 - Tagged as 3.15
 - Added Paladin's Light's Hammer and Hand of Purity
