--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+3.22
+- Update ToC to 5.4
+- Update to reflect changes in 5.4 (Note: tooltip changes will be in a future patch)
+
 3.20
 - Fix Ancestral Guidance
 
