--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+3.54
+- Fix: Anchoring issues when bar growth is set to "Left"
+- Fix: Styling issues conflicting with BigWigs (hopefully)
+- Fix: Show the mover when you unlock it w/out ElvUI
+
 3.53
 - Fixed total number of CD's not showing again when ready mode is off.
 
