--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+3.57
+- Add separate battle rez tracker, shows on boss engage. Top of the frame.
+- Handle players that release/insta-res better
+
 3.56
 - Send chat messages to specified channels
 - Fix: Set extras (hopefully)
