--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,8 @@
 3.57
 - Add separate battle rez tracker, shows on boss engage. Top of the frame.
 - Handle players that release/insta-res better
+- Add minimap button
+- Added Spirit Shell and Stampeding Roar
 
 3.56
 - Send chat messages to specified channels
