Still trying to fix anchoring issues.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,9 +1,8 @@
-3.59
-- Various bug fixes
-
 3.58
 - Fix Spirit Shell CD
-- Fix Stampeding Roar when not glyped
+- Fix Stampeding Roar when not glyphed
+- Various bug fixes, trying to fix anchoring interfering with BigWigs
+- Remove sologroup and always show, causing too much pain for now
 
 3.57
 - Add separate battle rez tracker, shows on boss engage. Top of the frame.
