--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,7 @@
 - Added initial code to support Paladin charge spells when spec'd Clemency
 *Will add other spells after beta
 *Could be broken with double sac on 2 different people (looking for bugs)
+- Added option to disable battle res monitor
 
 3.62
 - Fix click to announce on paused bars
