--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,8 @@
 *Will add other spells after beta
 *Could be broken with double sac on 2 different people (looking for bugs)
 - Added option to disable battle res monitor
+- Add option to set bar fill/drain direction
+- Regroup addon options to make it look pretty
 
 3.62
 - Fix click to announce on paused bars
