--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,10 +1,11 @@
 3.63 BETA
 - Added initial code to support Paladin charge spells when spec'd Clemency
-*Will add other spells after beta
 *Could be broken with double sac on 2 different people (looking for bugs)
 - Added option to disable battle res monitor
 - Add option to set bar fill/drain direction
 - Regroup addon options to make it look pretty
+- Add Remaining charge spells
+- Fix: 3 min CDs reset on wipe
 
 3.62
 - Fix click to announce on paused bars
